name:                xmonad-exe
version:             0.1.0.0
synopsis:            My XMonad config
description:         My XMonad config
homepage:            https://github.com/mat8913/xmonad-exe#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Harm Bekkema
maintainer:          mbekkema97@gmail.com
copyright:           2017 Matthew Harm Bekkema
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmonad-exe
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base < 5
                     , xmonad
                     , xmonad-contrib
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mat8913/xmonad-exe
